@@ -5,6 +5,9 @@ Broker:
 - Fix build when using WITH_ADNS=yes.
 - Fix incorrect call to setsockopt() for TCP_NODELAY. Closes #941.
 
+Build:
+- Make it easier to build with bundled uthash.h using "WITH_BUNDLED_DEPS=no".
+
 
 1.5.1 - 20180816
 ================
